W.I.P - Build onboard screen feature

--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>hasBrain Tracker</title>
+  <title>1hasBrain Tracker</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <div id="root"></div>
-  <div id="learning-tree1"></div>
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
   <script type="text/javascript" src="https://cdn.pubnub.com/pubnub-3.7.18.min.js"></script>
